- improved code readability in similarity calculations - fixed modal toggle bug in frontend recommendation display - minor styling tweaks and variable renaming

--- a/frontend/my-bookshelf/src/GenreBookList.css
+++ b/frontend/my-bookshelf/src/GenreBookList.css
@@ -10,4 +10,7 @@
 .book-category {
     text-align: left;
     margin-left: 120px;
+    font-family: Montserrat, Roboto, Noto, sans-serif;
+
+
 }
